feat: Add files of day 18 with modifications
